# wikiscapes

./: CLAUDE.md  README.md  pyproject.toml
wikiscapes/: __init__.py  cli.py  config.py  models.py
wikiscapes/core/: evolve.py  ingest.py  lint.py  query.py
wikiscapes/llm/: client.py  prompts.py  synthesis.py
wikiscapes/store/: article_store.py  index.py  map_state.py
wikiscapes/topo/: confluence.py  embed.py  layout.py  spatial.py
wikiscapes/viz/: plotly_map.py  static_map.py
