[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wikiscapes"
version = "0.1.0"
description = "Brainscapes-inspired topographic LLM knowledge base wiki"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "anthropic>=0.40.0",
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "python-frontmatter>=1.1.0",
    "umap-learn>=0.5.6",
    "hdbscan>=0.8.38",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "plotly>=5.22.0",
    "matplotlib>=3.9.0",
    "sentence-transformers>=3.0.0",
    "rich>=13.7.0",
    "pypdf>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.30.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
wikiscapes = "wikiscapes.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["wikiscapes"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
